-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
4.6.0
-
None
-
None
-
56da3aca1fc8a7c269acf3cf1d4c3586ea8cdfd7
To reproduce:
Open DesktopServices demo in emulator.
Select Music tab page.
Select either of the tunes.
Press Selection key.
==> Error note is shown that the action is not possible in the emulator.
Notice that the color of labels for the tabwidget change in the background.
This is due to void QS60StylePrivate::setThemePaletteHash(QPalette *palette) const sets S60 theme color only to to active palette, when it should
set it for all palettes.