QS60Style - TabWidget text changes color when widget becomes dimmed

Style sets the tabWidget palette hash only for QPalette::Active.
So, when widget becomes disabled, text color changes back to default.

Task-number: QTBUG-4625
Reviewed-by: Alessandro Portale